<resources>
    <string name="server_url">http://192.168.1.44:8080</string>

    <string name="app_name">ConvenientTravels</string>
    <string name="header_menu">ConvenientTravels Menu</string>
    <string name="header_addnewdrive">Miejsce i czas wyjazdu</string>
    <string name="header_addnewdrive_arrivaldetails">Miejsce docelowe</string>
    <string name="header_addnewdrive_drivedetails">Szczegóły przejazdu</string>
    <string name="header_searchdrive">Wyszukaj przejazd</string>
    <string name="header_mydrives">Moje przejazdy</string>
    <string name="header_mydrive">Szczegóły przejazdu</string>
    <string name="header_mydrive_editdrive">Edytuj przejazd</string>
    <string name="header_mybookings">Moje rezerwacje</string>


    <!-- Strings related to login -->
    <string name="prompt_login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Hasło</string>
    <string name="action_sign_in">Zaloguj się</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_exit">Zamknij</string>
    <string name="error_invalid_login">Podany login jest nieprawidłowy</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">Podane hasło jest nieprawidłowe</string>
    <string name="error_incorrect_password">Podane hasło jest nieprawidłowe</string>
    <string name="error_wrong_credentials">Podane dane logowania są nieprawdiłowe</string>
    <string name="error_field_required">To pole jest wymagane</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="prompt_city_start">Miasto początkowe</string>
    <string name="prompt_street_start">Ulica początkowa</string>
    <string name="prompt_exact_place_start">Dokładne miejsce początkowe</string>
    <string name="prompt_city_arrival">Miasto docelowe</string>
    <string name="prompt_street_arrival">Ulica docelowa</string>
    <string name="prompt_exact_place_arrival">Dokładne miejsce docelowe</string>
    <string name="label_date_start">Data wyjazdu</string>
    <string name="action_go_next">Przejdź dalej</string>
    <string name="prompt_driver_comment">Komentarz na temat przejazdu</string>
    <string name="prompt_passengers_quantity">Ilość pasażerów</string>
    <string name="prompt_cost">Koszt (zł)</string>
    <string name="checkbox_is_smoke_permitted">Można palić</string>
    <string name="checkbox_is_round_trip">Przejazd w obie strony</string>
    <string name="action_submit">Zatwierdź</string>

    <string name="error_add_new_drive">Nie udało się dodać przejazdu</string>
    <string name="success_add_new_drive">Dodano przejazd</string>
    <string name="error_get_my_drives">Nie udało się pobrać przejazdów</string>

    <string-array name="luggage_array">
        <item>Maly</item>
        <item>Sredni</item>
        <item>Duzy</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
