<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="mvc.com.DriveDetails_AddNewDriveActivity">

    <ScrollView
        android:id="@+id/drive_details_new_drive_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/container_drive_details_new_drive_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/driver_comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:hint="@string/prompt_driver_comment" />

            <EditText
                android:id="@+id/passengers_quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/prompt_passengers_quantity" />

            <EditText
                android:id="@+id/cost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/prompt_cost" />

            <Spinner
                android:id="@+id/luggage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp" />

            <CheckBox
                android:id="@+id/smoke_permitted_checkbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/checkbox_is_smoke_permitted"
                android:layout_marginBottom="16dp" />

            <CheckBox
                android:id="@+id/round_trip_checkbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/checkbox_is_round_trip"
                android:layout_marginBottom="16dp"/>

            <DatePicker
                android:id="@+id/datePicker_returnDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp" />

            <TimePicker
                android:id="@+id/timePicker_returnDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp" />

            <Button
                android:id="@+id/submit_new_drive_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/action_submit" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>